@startuml

title __CONDITIONALTEXTUALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.textualOperators {
      namespace conditionalTextualOperators {
        abstract class gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.ConditionalTextualOperator {
            + getOperatorExpression()
            # ConditionalTextualOperator()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.textualOperators {
      namespace conditionalTextualOperators {
        class gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.OperatorAllKeywords {
            {static} + newOperatorAllKeywords()
            - OperatorAllKeywords()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.textualOperators {
      namespace conditionalTextualOperators {
        class gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.OperatorAnyKeywords {
            {static} + newOperatorAnyKeywords()
            - OperatorAnyKeywords()
        }
      }
    }
  }
  

  gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.ConditionalTextualOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.textualOperators.conditionalTextualOperators.ConditionalTextualOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.OperatorAllKeywords -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.ConditionalTextualOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.OperatorAnyKeywords -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.textualOperators.conditionalTextualOperators.ConditionalTextualOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
